--- a/webapp-react/package.json
+++ b/webapp-react/package.json
@@ -3,8 +3,6 @@
       "version": "0.1.0",
       "private": true,
       "dependencies": {
-            "@formio/js": "^5.2.2",
-            "@formio/react": "^6.1.0",
             "@radix-ui/react-accordion": "^1.2.3",
             "@radix-ui/react-alert-dialog": "^1.1.6",
             "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -31,6 +29,7 @@
             "@radix-ui/react-toggle": "^1.1.2",
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
+            "@types/react-beautiful-dnd": "^13.1.8",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
             "cmdk": "^1.1.1",
@@ -40,6 +39,7 @@
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
             "react": "^18.3.1",
+            "react-beautiful-dnd": "^13.1.1",
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
             "react-hook-form": "^7.55.0",
