--- a/webapp-react/package.json
+++ b/webapp-react/package.json
@@ -3,6 +3,8 @@
       "version": "0.1.0",
       "private": true,
       "dependencies": {
+            "@formio/js": "^5.2.2",
+            "@formio/react": "^6.1.0",
             "@radix-ui/react-accordion": "^1.2.3",
             "@radix-ui/react-alert-dialog": "^1.1.6",
             "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -34,7 +36,6 @@
             "clsx": "*",
             "cmdk": "^1.1.1",
             "embla-carousel-react": "^8.6.0",
-            "formiojs": "^4.21.7",
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
@@ -53,6 +54,7 @@
             "@types/node": "^20.10.0",
             "@types/react": "^18.3.26",
             "@types/react-dom": "^18.3.7",
+            "@vitejs/plugin-react": "^5.0.4",
             "@vitejs/plugin-react-swc": "^3.10.2",
             "autoprefixer": "^10.4.21",
             "postcss": "^8.5.6",
