--- a/CyprusAgriculture.API/appsettings.json
+++ b/CyprusAgriculture.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=CyAgroQ;Username=padmin;Password=Aathapassword"
+    "DefaultConnection": "Host=192.168.1.91;Database=CyAgroQ;Username=padmin;Password=Aathapassword"
   },
   "Logging": {
     "LogLevel": {
