--- a/CyprusAgriculture.API/appsettings.Development.json
+++ b/CyprusAgriculture.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=CyAgroQ;Username=padmin;Password=Aathapassword;SSL Mode=Prefer;Trust Server Certificate=true"
+    "DefaultConnection": "Host=192.168.1.91;Port=5432;Database=CyAgroQ;Username=padmin;Password=Aathapassword;SSL Mode=Prefer;Trust Server Certificate=true"
   },
   "Logging": {
     "LogLevel": {
